--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     font-family: Poppins;
 }
 
+body{
+    justify-content: center;
+    align-items: center;
+}
+
 :root{
     --cloudy: linear-gradient(0degree ,#19335A, #8FC8EB
     );
@@ -175,8 +180,7 @@ input:focus{
     width: 100%;
     font-size:10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
-    height: 180px;
-   
+    height: 180px; 
     
     
 }
@@ -192,3 +196,8 @@ input:focus{
     font-size: 15px;
 }
 
+/*RESPONSIVIDADE*/
+
+@media screen {
+    
+}
