--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@
     );
 }
 
+body{
+    justify-content: center;
+    align-items: center;
+}
+
+
 .weather-container{
     width: 100vh;
     height: 100vh;
