--- a/style.css
+++ b/style.css
@@ -36,6 +36,19 @@ body{
 
 }
 
+/*RESPONSIVO*/
+@media screen and (max-width: 768px){
+    .weather-container{
+        width: 100vw;
+        height: 100vw;
+        border-radius:0px;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        color: rgb(28, 28, 28);
+    }
+}
+
 .weather-search{
     width:100%;
     align-items: center;
