--- a/style.css
+++ b/style.css
@@ -35,15 +35,15 @@ body{
 }
 /*RESPONSIVO*/
 @media screen and (max-width: 768px){
-    .weather-container{
+    .weather-container{        
         
-        border-radius:0px;
         width: 95vw;
         height: 100%;
         margin: 0 auto;
         margin-top: 20px;
         color: rgb(28, 28, 28);
         box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+        border-radius: 20px;
     }
 }
 
@@ -136,9 +136,10 @@ input:focus{
 @media screen and (max-width: 768px){
     .weather-current{
         grid-template-columns: 1fr 2fr;
-        margin-left:0px;
+        margin-left:25px;
         grid-gap: 10px;
         text-align: center;
+        
     }
 }
 
@@ -161,6 +162,7 @@ input:focus{
         margin-top:10px;
         padding:1px;
         justify-content: center;
+        align-items: center;
     }
 }
 
@@ -218,7 +220,7 @@ input:focus{
 
 @media screen and (max-width: 768px){
     .units-cards{
-        width: 80px;
+        width: 110px;
         height: 100%;
         margin-top: 0px;
         font-size:10px;
