--- a/style.css
+++ b/style.css
@@ -28,20 +28,22 @@ body{
     border-radius:20px;
     width: 492px;
     height: 590px;
-    margin: 0  auto;    
+    margin: 0  auto;   
+    margin-top: 15px; 
     color: rgb(28, 28, 28);
 
 }
 /*RESPONSIVO*/
 @media screen and (max-width: 768px){
-    .weather-container{
-        width: 100vw;
-        height: 100vw;
-        border-radius:0px;
-        width: 100%;
+    .weather-container{        
+        
+        width: 95vw;
         height: 100%;
-        margin: 0;
+        margin: 0 auto;
+        margin-top: 20px;
         color: rgb(28, 28, 28);
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+        border-radius: 20px;
     }
 }
 
@@ -131,6 +133,16 @@ input:focus{
     font-weight: 300;
 }
 
+@media screen and (max-width: 768px){
+    .weather-current{
+        grid-template-columns: 1fr 2fr;
+        margin-left:25px;
+        grid-gap: 10px;
+        text-align: center;
+        
+    }
+}
+
 .weather-forecast{
     display:flex;    
     width:500px;
@@ -141,6 +153,17 @@ input:focus{
     margin-top:10px;
     padding:5px;    
     font-weight: 300;
+}
+
+@media screen and (max-width: 768px){
+    .weather-forecast{
+        width:100%;
+        height:100%;
+        margin-top:10px;
+        padding:1px;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 
@@ -193,6 +216,17 @@ input:focus{
     height: 180px; 
     
     
+}
+
+@media screen and (max-width: 768px){
+    .units-cards{
+        width: 110px;
+        height: 100%;
+        margin-top: 0px;
+        font-size:10px;
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+        
+    }
 }
 
 .cards-icons{
